@@ -8,7 +8,7 @@
   ],
   "key": {
     "#": {
-      "item": "quark:ancient_log"
+      "item": "quark:stripped_ancient_log"
     },
     "X": {
       "item": "minecraft:chain"
